Fix horizontal scroll in mvp

--- a/public/assets/course_style.css
+++ b/public/assets/course_style.css
@@ -10,6 +10,9 @@
   padding-right: 0;
 }
 
+.video-container .row {
+  margin: 0!important;
+}
 
 div#sidebar {
   color: #c5c5c5;
